fixed overflowing title + added edit icon

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,22 +54,26 @@ textarea {
       box-shadow: 2px 2px 8px rgb(107, 107, 107);
   }
 
-  .fa-thumbtack {
-      position: absolute;
-      top: 16px;
-      right: 45px;
-  }
-
-  .todo-icons {
+  .todo-icons-delete {
       display: flex;
       flex-direction: column;
       align-items: center;
       position: absolute;
-      gap: 7px;
+      gap: 8px;
       top: 15px;
       right: 15px;
   }
 
+  .todo-icons-edit-pin {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    gap: 6px;
+    top: 15px;
+    right: 40px;
+  }
+
+  .fa-pen-to-square,
   .fa-thumbtack,
   .fa-check,
   .fa-xmark,
@@ -82,6 +86,10 @@ textarea {
   .fa-check,
   .fa-xmark {
       display: none;
+  }
+
+  .fa-thumbtack {
+    transform: translateY(8%);
   }
 
   .iconActive {
@@ -107,7 +115,7 @@ textarea {
   }
 
   .todo-title {
-    width: 80%;
+    width: 75%;
   }
 
   .fa-thumbtack,
@@ -134,6 +142,12 @@ textarea {
       font-family: 'Karla', sans-serif;
       font-size: 1.3rem;
   }
+
+  .todo-desc,
+  .todo-title {
+       white-space: initial;
+       overflow-wrap: break-word;
+    }
 
 }
 
